force-app/main/default/objects/Previous_Education__c/Previous_Education__c.object-meta.xml
<CustomObject>
    <description>Self-reported academic history from application</description>
    <label>Previous Education</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <label>Previous Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>