force-app/main/default/objects/Previous_Education__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Institution stored as an Account record.</description>
    <label>Institution</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Institution</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Education</relationshipLabel>
    <relationshipName>Previous_Education</relationshipName>
    <type>Lookup</type>
</CustomField>