force-app/main/default/objects/Previous_Education__c/fields/ASU_Geomarket__c.field-meta.xml
<CustomField>
    <fullName>ASU_Geomarket__c</fullName>
    <formula>Account__r.ASU_Geomarket_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASU Geomarket</label>
    <type>Text</type>
</CustomField>