force-app/main/default/objects/Previous_Education__c/fields/ATP_Code__c.field-meta.xml
<CustomField>
    <fullName>ATP_Code__c</fullName>
    <description>The American Testing Program (ATP) Code or College Entrance Examination Board (CEEB) Code is a 6-digit number that is used by standardized tests such as SAT and ACT. The first 2 digits indicate the state. The ATP Code is a 4-digit number for higher education institutions.</description>
    <formula>Account__r.ATP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the ATP or CEEB Code</inlineHelpText>
    <label>ATP Code</label>
    <type>Text</type>
</CustomField>