force-app/main/default/objects/Previous_Education__c/fields/Class_Rank__c.field-meta.xml
<CustomField>
    <fullName>Class_Rank__c</fullName>
    <inlineHelpText>This student's class rank. Used along with Class Size to calculate Class Rank Percentile.</inlineHelpText>
    <label>Class Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>