force-app/main/default/objects/Previous_Education__c/fields/Class_Rank_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Class_Rank_Percentile__c</fullName>
    <formula>IF(Class_Rank__c &gt; 0 &amp;&amp; Class_Size__c &gt; 0,1-Class_Rank__c /Class_Size__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This student's class rank, in percentile format (rounded to a whole number). Calculated from the Class Rank and Class Size stored on this Previous Education Record.</inlineHelpText>
    <label>Class Rank Percentile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>