force-app/main/default/objects/Previous_Education__c/fields/Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Class_Size__c</fullName>
    <inlineHelpText>The size of the graduating class at the institution referenced on this Previous Education record. Used along with Class Rank to calculate Class Rank Percentile.</inlineHelpText>
    <label>Class Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>