force-app/main/default/objects/Previous_Education__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[??] - Shows the name of the previous degree</description>
    <label>Degree</label>
    <referenceTo>Degree_Name__c</referenceTo>
    <relationshipLabel>Previous Education</relationshipLabel>
    <relationshipName>Previous_Education</relationshipName>
    <type>Lookup</type>
</CustomField>