force-app/main/default/objects/Previous_Education__c/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <description>[??] - Examples include: Undergraduate, Graduate, Certificate, General Ed, Other</description>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>General Ed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>