force-app/main/default/objects/Previous_Education__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <inlineHelpText>GPA at listed institution</inlineHelpText>
    <label>GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>