force-app/main/default/objects/Previous_Education__c/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <description>[??] - Graduation date tied to previous education</description>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>