force-app/main/default/objects/Previous_Education__c/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <formula>TEXT(Account__r.Institution_Type__c)</formula>
    <label>Institution Type</label>
    <type>Text</type>
</CustomField>