force-app/main/default/objects/Previous_Education__c/fields/Is_Last_High_School_Attended__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_High_School_Attended__c</fullName>
    <formula>Account__c =  Contact__r.Last_HS_Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last High School Attended</label>
    <type>Checkbox</type>
</CustomField>