force-app/main/default/objects/Previous_Education__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A connection to the Source (Campaign) record associated with the origin of the information on this Previous Education record.</description>
    <inlineHelpText>A connection to the Source (Campaign) record associated with the origin of the information on this Previous Education record.</inlineHelpText>
    <label>Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Previous Education</relationshipLabel>
    <relationshipName>Previous_Education</relationshipName>
    <type>Lookup</type>
</CustomField>