force-app/main/default/objects/Previous_Education__c/listViews/All_Previous_Education.listView-meta.xml
<ListView>
    <fullName>All_Previous_Education</fullName>
    <columns>Contact__c</columns>
    <columns>Degree_Type__c</columns>
    <columns>Degree__c</columns>
    <columns>Graduation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Previous Education</label>
</ListView>